[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "chan-osint"
version = "0.1.0"
description = "4chan thread OSINT scraper"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
chan = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
